[tool.poetry]
name = "pinpointlearning"
version = "0.1.0"
description = ""
authors = ["bibblybobblyben <ben.s.mawdsley@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.1.1"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
pre-commit = "^3.8.0"
nbstripout = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
